<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.atmconsultoria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.atmconsultoria.ui.services.ServicesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.example.atmconsultoria.ui.clients.ClientsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.atmconsultoria.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.atmconsultoria.ui.contact.ContactFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.atmconsultoria.ui.about.AboutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_about" />
</navigation>